<?xml version="1.0"?>
<package format="2">
  <name>ur5e_description</name>
  <version>0.1.0</version>
  <description>UR5e description with Gazebo ros_control support</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- 运行时依赖 -->
  <depend>xacro</depend>
  <depend>urdf</depend>
  <depend>gazebo_ros</depend>
  <!-- 添加核心ROS C++依赖 -->
  <depend>roscpp</depend>
  <depend>rosconsole</depend>
  <depend>robot_state_publisher</depend>
  <depend>controller_manager</depend>
  <depend>joint_state_controller</depend>
  <depend>effort_controllers</depend>
  <depend>position_controllers</depend>
  <depend>gazebo_ros_control</depend>
  
  <!-- 修改后 -->
  <build_depend>ros_control</build_depend>
  <exec_depend>ros_control</exec_depend>
  <build_depend>controller_interface</build_depend>
  <exec_depend>controller_interface</exec_depend>
  <build_depend>joint_trajectory_controller</build_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <!-- 修改后 -->
  <build_depend>pluginlib</build_depend>
  <exec_depend>pluginlib</exec_depend>
  <build_depend>hardware_interface</build_depend>
  <exec_depend>hardware_interface</exec_depend>

  <!-- 若使用 MoveIt，请在此添加：
  <depend>moveit_ros_planning</depend>
  -->
  
  <export/>
</package>
